--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -175,7 +175,11 @@ header.nav-active .header-nav-overlay {
     .wrap-list-nav-sub {
         position: absolute;
         left: 0;
+        top: 22px;
         width: 100%;
+        border-bottom: solid 1px #000;
+        min-height: 200px;
+        background-color: aquamarine;
     }
 
     .wrap-list-nav-sub .list-nav-sub {
@@ -187,18 +191,18 @@ header.nav-active .header-nav-overlay {
     .trend-item a,
     .cate-item a,
     .nav-item a {
-        position: relative;
+        posit baion: relative;
     }
 
     .trend-item a span,
     .cate-item a span,
     .nav-item a span {
-        opacity: 0.99;
+        opaci baty: 0.99;
     }
 
     .cate-item>a:before,
     .nav-item>a:before,
-    .trend-item>a:before {
+    .trend-it baem>a:before {
         content: '';
         position: absolute;
         left: -2px;
@@ -212,7 +216,7 @@ header.nav-active .header-nav-overlay {
     .trend-item.on>a:before,
     .cate-item.on>a:before,
     .nav-item.on>a:before {
-        width: calc(100% + 3px);
+        width ba: calc(100% + 3px);
         background-image: linear-gradient(to bottom, #9bce26, #9bce26);
     }
 
@@ -465,11 +469,12 @@ header.nav-active .header-nav-overlay {
 
 
 .list-nav .nav-item {
-
+    background-color: red;
     margin-top: 0;
 }
 
 .list-nav .nav-item .link {
+    display: block;
     color: #141414;
     font-size: .9375rem;
     letter-spacing: 0;
