--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -76,9 +76,7 @@ body.fixed {
     display: block
 }
 
-.list-nav .nav-item {
-    margin-top: 24px;
-}
+.list-nav .nav-item {}
 
 .list-nav .nav-item>a {
     font-size: 17px
@@ -179,30 +177,62 @@ header.nav-active .header-nav-overlay {
         width: 100%;
         border-bottom: solid 1px #000;
         min-height: 200px;
-        background-color: aquamarine;
+        background-color: #fff;
     }
 
     .wrap-list-nav-sub .list-nav-sub {
         width: 1200px;
         margin: 0 auto;
         display: flex;
+        padding-top: 30px;
     }
 
+    /* 타이틀 폰트 */
+    .tit-sub-area .txt-tit,
+    .tit-cate-area .txt-tit,
+    .tit-trend-area .txt-tit {
+        color: #141414;
+        font-size: .875rem;
+        letter-spacing: 0;
+        font-weight: 700;
+    }
+
+    /* 언더라인 */
+    .tit-sub-area .txt-tit:after,
+    .tit-cate-area .txt-tit:after,
+    .tit-trend-area .txt-tit:after {
+        content: "";
+        display: block;
+        width: 100%;
+        height: 1px;
+        background: #cacaca;
+    }
+
+
+    .nav-grandchild-item .link,
+    .cate-item .link {
+        color: #141414;
+        font-size: .875rem;
+        letter-spacing: 0;
+        font-weight: 700;
+        margin: 0;
+        text-decoration: none;
+    }
+
+
+
+    .nav-grandchild-item a,
     .trend-item a,
     .cate-item a,
     .nav-item a {
-        posit baion: relative;
+        position: relative;
+        opacity: 0.99;
     }
 
-    .trend-item a span,
-    .cate-item a span,
-    .nav-item a span {
-        opaci baty: 0.99;
-    }
-
+    .nav-grandchild-item>a:before,
     .cate-item>a:before,
     .nav-item>a:before,
-    .trend-it baem>a:before {
+    .trend-item>a:before {
         content: '';
         position: absolute;
         left: -2px;
@@ -213,10 +243,11 @@ header.nav-active .header-nav-overlay {
         transition: width 0.25s ease-out;
     }
 
+    .nav-grandchild-item.on>a:before,
     .trend-item.on>a:before,
     .cate-item.on>a:before,
     .nav-item.on>a:before {
-        width ba: calc(100% + 3px);
+        width: calc(100% + 3px);
         background-image: linear-gradient(to bottom, #9bce26, #9bce26);
     }
 
@@ -383,22 +414,7 @@ header.nav-active .header-nav-overlay {
         margin-right: 25px;
     } */
 
-    .tit-cate-area .txt-tit,
-    .tit-trend-area .txt-tit {
-        color: #141414;
-        font-size: .875rem;
-        letter-spacing: 0;
-        font-weight: 700;
-    }
 
-    .tit-cate-area .txt-tit:after,
-    .tit-trend-area .txt-tit:after {
-        content: "";
-        display: block;
-        width: 100%;
-        height: 1px;
-        background: #cacaca;
-    }
 }
 
 .wrap-gnb-container {
@@ -431,14 +447,7 @@ header.nav-active .header-nav-overlay {
     margin-top: 12px;
 }
 
-.cate .list-cate .cate-item .link {
-    color: #141414;
-    font-size: .875rem;
-    letter-spacing: 0;
-    font-weight: 700;
-    margin: 0;
-    text-decoration: none;
-}
+
 
 .cate .wrap-gnb-container.active {
     display: block;
@@ -469,11 +478,11 @@ header.nav-active .header-nav-overlay {
 
 
 .list-nav .nav-item {
-    background-color: red;
     margin-top: 0;
 }
 
-.list-nav .nav-item .link {
+.list-nav .nav-item>.link {
+    position: relative;
     display: block;
     color: #141414;
     font-size: .9375rem;
