--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -14,7 +14,14 @@
     {{ 'bootstrap.css' | asset_url | stylesheet_tag }}
   </head>
   <body>
+    <a class="skip-to-content-link button visually-hidden" href="#MainContent">
+      {{ 'accessibility.skip_to_text' | t }}
+    </a>
+
     {% section 'header' %}
+    <main id="MainContent" class="content-for-layout focus-none" role="main" tabindex="-1">
+      {{ content_for_layout }}
+    </main>
     {% comment %} {{ content_for_layout }} {% endcomment %}
     <div style="height:500px"></div>
     {% section 'footer' %}
