--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -73,95 +73,94 @@
   {% comment %} header bottom [all catetory, main menu, side menu] {% endcomment %}
   <div class="header-bottom">
     <div class="wrap-header-nav">
-      <div class="gnb">
+      <nav class="gnb">
         <div class="left">
-          {% comment %}
-            <div class="cate">
-              <button class="btn-cate">
-                <span class="icon-hamburger">
-                  <span class="line"></span>
-                  <span class="line"></span>
-                  <span class="line"></span>
-                </span>
-                <span class="txt-menu">
-                  <span>カテゴリー</span>
-                </span>
-              </button>
-              <div class="wrap-gnb-container">
-                <div class="wrap-gnb-inner-container">
-                  <div class="cus-col menu">
-                    <div class="tit-cate-area">
-                      <h1 class="txt-tit">
-                        {{ main_menu.title }}
-                      </h1>
-                    </div>
-                    <ul class="list-cate">
-                      {% for link in section.settings.allMenu.links %}
-                        <li class="cate-item">
-                          <a class="link" href="{{link.url}}"
-                            ><span>{{ link.title }}</span></a
-                          >
-                        </li>
-                      {% endfor %}
-                    </ul>
+          <div class="cate">
+            <button class="btn-cate">
+              <span class="icon-hamburger">
+                <span class="line"></span>
+                <span class="line"></span>
+                <span class="line"></span>
+              </span>
+              <span class="txt-menu">
+                <span>カテゴリー</span>
+              </span>
+            </button>
+            <div class="wrap-gnb-container">
+              <div class="wrap-gnb-inner-container">
+                <div class="cus-col menu">
+                  <div class="tit-cate-area">
+                    <h1 class="txt-tit">
+                      {{ main_menu.title }}
+                    </h1>
                   </div>
-                  <div class="cus-col trend">
-                    <div class="tit-trend-area">
-                      {% if section.settings.tit_trend != black %}
-                        <h1 class="txt-tit">{{ section.settings.tit_trend }}</h1>
-                      {% endif %}
-                    </div>
-                    <ul class="list-trend">
-                      <li class="trend-item">
-                        <a href=""
-                          ><span>{{ section.settings.trend_01 }}</span></a
+                  <ul class="list-cate">
+                    {% for link in section.settings.allMenu.links %}
+                      <li class="cate-item">
+                        <a class="link" href="{{link.url}}"
+                          ><span>{{ link.title }}</span></a
                         >
                       </li>
-                      <li class="trend-item">
-                        <a href=""
-                          ><span>{{ section.settings.trend_02 }}</span></a
-                        >
-                      </li>
-                      <li class="trend-item">
-                        <a href=""
-                          ><span>{{ section.settings.trend_03 }}</span></a
-                        >
-                      </li>
-                      <li class="trend-item">
-                        <a href=""
-                          ><span>{{ section.settings.trend_04 }}</span></a
-                        >
-                      </li>
-                      <li class="trend-item">
-                        <a href=""
-                          ><span>{{ section.settings.trend_05 }}</span></a
-                        >
-                      </li>
-                    </ul>
+                    {% endfor %}
+                  </ul>
+                </div>
+                <div class="cus-col trend">
+                  <div class="tit-trend-area">
+                    {% if section.settings.tit_trend != black %}
+                      <h1 class="txt-tit">{{ section.settings.tit_trend }}</h1>
+                    {% endif %}
                   </div>
-                  <div class="cus-col banner">
-                    <a
-                      class="link"
-                      hrf="{{section.settings.banner01_link}}"
-                      style="display:block;max-width: min(100%, {{ section.settings.banner01_width }}px);"
-                    >
-                      <img loading="lazy" src="{{ section.settings.banner01 | img_url: 'master' }}" width="100%">
-                      <p>{{ section.settings.banner01_title }}</p>
-                    </a>
+                  <ul class="list-trend">
+                    <li class="trend-item">
+                      <a href=""
+                        ><span>{{ section.settings.trend_01 }}</span></a
+                      >
+                    </li>
+                    <li class="trend-item">
+                      <a href=""
+                        ><span>{{ section.settings.trend_02 }}</span></a
+                      >
+                    </li>
+                    <li class="trend-item">
+                      <a href=""
+                        ><span>{{ section.settings.trend_03 }}</span></a
+                      >
+                    </li>
+                    <li class="trend-item">
+                      <a href=""
+                        ><span>{{ section.settings.trend_04 }}</span></a
+                      >
+                    </li>
+                    <li class="trend-item">
+                      <a href=""
+                        ><span>{{ section.settings.trend_05 }}</span></a
+                      >
+                    </li>
+                  </ul>
+                </div>
+                <div class="cus-col banner">
+                  <a
+                    class="link"
+                    hrf="{{section.settings.banner01_link}}"
+                    style="display:block;max-width: min(100%, {{ section.settings.banner01_width }}px);"
+                  >
+                    <img loading="lazy" src="{{ section.settings.banner01 | img_url: 'master' }}" width="100%">
+                    <p>{{ section.settings.banner01_title }}</p>
+                  </a>
 
-                    <a
-                      class="link"
-                      hrf="{{section.settings.banner02_link}}"
-                      style="display:block;max-width: min(100%, {{ section.settings.banner02_width }}px);"
-                    >
-                      <img loading="lazy" src="{{ section.settings.banner02 | img_url: 'master' }}" width="100%">
-                      <p>{{ section.settings.banner02_title }}</p>
-                    </a>
-                  </div>
+                  <a
+                    class="link"
+                    hrf="{{section.settings.banner02_link}}"
+                    style="display:block;max-width: min(100%, {{ section.settings.banner02_width }}px);"
+                  >
+                    <img loading="lazy" src="{{ section.settings.banner02 | img_url: 'master' }}" width="100%">
+                    <p>{{ section.settings.banner02_title }}</p>
+                  </a>
                 </div>
               </div>
             </div>
-          {% endcomment %}
+          </div>
+
           <ul class="list-nav">
             {% for link in section.settings.navigation.links %}
               <li class="nav-item gnb-item">
@@ -171,16 +170,18 @@
                 {% if link.links != blank %}
                   <div class="wrap-list-nav-sub sub-menu" style="display:none">
                     <ul class="list-nav-sub">
-                      {% for child in link.links %}
+                      {% for childlink in link.links %}
                         <li class="nav-item-sub">
-                          <a href="{{child.url}}">{{ child.title }}</a>
-                          <ul>
-                            {% for child in link.links %}
-                              {% if link.links != blank %}
-                                <li>
-                                  <a href="{{child.url}}">{{ child.title }}</a>
-                                </li>
-                              {% endif %}
+                          <div class="tit-sub-area">
+                            <a href="{{childlink.url}}" class="txt-tit">{{ childlink.title | escape }}</a>
+                          </div>
+                          <ul class="list-nav-grandchild list-unstyled">
+                            {% for grandchildlink in childlink.links %}
+                              <li class="nav-grandchild-item">
+                                <a class="link" href="{{grandchildlink.url}}"
+                                  ><span>{{ grandchildlink.title | escape }}</span></a
+                                >
+                              </li>
                             {% endfor %}
                           </ul>
                         </li>
@@ -203,7 +204,7 @@
             {% endfor %}
           </ul>
         </div>
-      </div>
+      </nav>
     </div>
   </div>
 </div>
@@ -277,7 +278,7 @@
     });
   });
 
-  addClassOnHover(['.nav-item', '.cate-item', '.trend-item', '.btn-cate'], 'on');
+  addClassOnHover(['.nav-item', '.cate-item', '.trend-item', '.btn-cate', '.nav-grandchild-item'], 'on');
 
   hamburgerMenu();
   allCateMenu();
