--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -33,7 +33,7 @@
         </form>
       </div>
     </div>
-    <button class="header-hamburger">
+    <button class="header-hamburger d-none d-sm-block d-md-none">
       <span class="line"></span>
       <span class="line"></span>
       <span class="line"></span>
