--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -20,7 +20,7 @@
 
     {% section 'header' %}
     <main id="MainContent" class="content-for-layout focus-none" role="main" tabindex="-1">
-      {{ content_for_layout }}
+      {% comment %} {{ content_for_layout }} {% endcomment %}
     </main>
     {% comment %} {{ content_for_layout }} {% endcomment %}
     <div style="height:500px"></div>
