--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -170,6 +170,12 @@ header.nav-active .header-nav-overlay {
 
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {
+
+    .announce-bar {
+
+        background: #f5f5f5;
+    }
+
     .wrap-list-nav-sub {
         position: absolute;
         left: 0;
