--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -171,10 +171,16 @@ header.nav-active .header-nav-overlay {
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {
 
+    /* desktop */
     .announce-bar {
-
         background: #f5f5f5;
     }
+
+    .announce-bar .txt {
+        font-size: 0.8125rem;
+        color: #949494;
+    }
+
 
     .wrap-list-nav-sub {
         position: absolute;
@@ -204,6 +210,10 @@ header.nav-active .header-nav-overlay {
     }
 
     /* 언더라인 */
+    .tit-sub-area {
+        width: 400px;
+    }
+
     .tit-sub-area .txt-tit:after,
     .tit-cate-area .txt-tit:after,
     .tit-trend-area .txt-tit:after {
@@ -213,6 +223,7 @@ header.nav-active .header-nav-overlay {
         height: 1px;
         background: #cacaca;
     }
+
 
 
     .nav-grandchild-item .link,
