--- a/assets/bootstrap5-3.css.liquid
+++ b/assets/bootstrap5-3.css.liquid
@@ -7741,12 +7741,12 @@ fieldset:disabled .btn {
 }
 
 .placeholder {
-    display: inline-block;
-    min-height: 1em;
-    vertical-align: middle;
-    cursor: wait;
-    background-color: currentcolor;
-    opacity: 0.5;
+    /* display: inline-block; */
+    /* min-height: 1em; */
+    /* vertical-align: middle; */
+    /* cursor: wait; */
+    /* background-color: currentcolor; */
+    /* opacity: 0.5; */
 }
 
 .placeholder.btn::before {
