--- a/assets/section-image-banner.css
+++ b/assets/section-image-banner.css
@@ -347,16 +347,17 @@
   }
 }
 
+/* 0615 dimmed 처리된 백그라운드 */
 .banner::after,
 .banner__media::after {
-  content: '';
+  /* content: '';
   position: absolute;
   top: 0;
-  /* background: #000000; */
+  background: #000000;
   opacity: 0;
   z-index: 1;
   width: 100%;
-  height: 100%;
+  height: 100%; */
 }
 
 .banner__box>*+.banner__text {
