--- a/sections/testsection.liquid
+++ b/sections/testsection.liquid
@@ -1,11 +1,10 @@
-<div><h1>test section</h1>h1></div>
-
+<div><h1>test section</h1></div>
 
 {% schema %}
-  {
-    "name": "Section name",
-    "settings": []
-  }
+{
+  "name": "Section name",
+  "settings": []
+}
 {% endschema %}
 
 {% stylesheet %}
