--- a/sections/testsection.liquid
+++ b/sections/testsection.liquid
@@ -1,32 +1,72 @@
-<<<<<<< HEAD
-<div><h1>test section</h1></div>
+<!-- Add init="false" -->
 
+<h1>{{ section.settings.heading }}</h1>
+<swiper-container init="false">
+  {% for block in section.blocks %}
+    <swiper-slide>{{ block.settings.title }}</swiper-slide>
+  {% endfor %}
+</swiper-container>
+
+<script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-element-bundle.min.js"></script>
 {% schema %}
 {
-  "name": "Section name",
-  "settings": []
+  "name": "testsection",
+  "settings": [
+    {
+      "type": "text",
+      "id": "heading",
+      "label": "Heading",
+      "default": "my custom slider"
+    }
+  ],
+  "blocks": [
+    {
+      "type": "column",
+      "name": "slide",
+      "settings": [
+        {
+          "type": "text",
+          "id": "title",
+          "label": "Title"
+        }
+      ]
+    }
+  ],
+  "presets": [
+    {
+      "name": "testsection"
+    }
+  ]
 }
-=======
-<div>
-  <h1>test section</h1>
-</div>
-
-
-{% schema %}
-  {
-    "name": "testsection",
-    "settings": [],
-    "presets":[
-      {
-        "name":"testsection"
-      }  
-    ]
-  }
->>>>>>> 11dc3e327f24b7742e225f85e42cd2ffe68b772d
 {% endschema %}
 
 {% stylesheet %}
 {% endstylesheet %}
 
 {% javascript %}
+  const swiperEl = document.querySelector('swiper-container');
+
+  // swiper parameters
+  const swiperParams = {
+    slidesPerView: 1,
+    breakpoints: {
+      640: {
+        slidesPerView: 2,
+      },
+      1024: {
+        slidesPerView: 3,
+      },
+    },
+    on: {
+      init() {
+        // ...
+      },
+    },
+  };
+
+  // now we need to assign all parameters to Swiper element
+  Object.assign(swiperEl, swiperParams);
+
+  // and now initialize it
+  swiperEl.initialize();
 {% endjavascript %}
