--- a/sections/test-collection.liquid
+++ b/sections/test-collection.liquid
@@ -25,7 +25,7 @@
 <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-element-bundle.min.js"></script>
 {% schema %}
 {
-  "name": "testsection",
+  "name": "test-collection",
   "settings": [
     {
       "type": "text",
@@ -64,7 +64,7 @@
   ],
   "presets": [
     {
-      "name": "testsection"
+      "name": "test-collection"
     }
   ]
 }
